# mathpixcli

./: Cargo.toml  README.md  notes.md  todo.md
.github/workflows/: ci.yml
src/: bin.rs  lib.rs  mathpix_header.rs
src/base64image/: mod.rs
src/endpoint/: mod.rs
src/endpoint/batch/: error.rs  mod.rs  options.rs  response.rs
src/endpoint/latex/: error.rs  mod.rs  options.rs  response.rs
src/endpoint/pdf/: error.rs  mod.rs  options.rs  response.rs
src/endpoint/shared_objects/request/: base64image.rs  mod.rs
src/endpoint/shared_objects/response/: mod.rs
src/endpoint/strokes/: error.rs  mod.rs  options.rs  response.rs
src/endpoint/text/: error.rs  mod.rs  options.rs  response.rs
src/header/: mod.rs
src/mathpix_body/: batch.rs  latex.rs  mod.rs  pdf.rs  shared_objects.rs  strokes.rs  text.rs
src/mathpix_body/shared_objects/: base64image.rs  mod.rs
src/process/: batch.rs  latex.rs  mod.rs  pdf.rs  strokes.rs  text.rs
src/request/: header.rs  mod.rs
src/request/body/: batch.rs  latex.rs  mod.rs  pdf.rs  strokes.rs  text.rs
src/request/body/pdf/: mod.rs
src/request/body/shared_objects/: base64image.rs  mod.rs
src/request/body/text/: mod.rs  options.rs
src/request/endpoint/latex/: mod.rs
src/request/endpoint/shared_objects/: mod.rs
src/request/endpoint/strokes/: mod.rs
src/request/endpoint/text/: mod.rs  options.rs
src/response/: latex.rs  mod.rs  shared_objects.rs  strokes.rs  text.rs
