[package]
name = "mathpix"
version = "0.1.0"
authors = ["Martin Kunz <martinkunz@email.cz>"]
edition = "2018"
description = "A mathpix api interaction library along with a cli that can read from stdin and read from a config."
repository = "https://github.com/kunzaatko/mathpixcli"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mathpixapi"
path = "src/lib.rs"

[[bin]]
name = "mathpixcli"
path = "src/bin.rs"
required-features = ["clap"]

[dependencies]
base64 = "0.13.0"
mime = "0.3.16"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["json"] }
clap = { version = "3.0.0-beta.2", optional = true }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.26"
anyhow = "1.0.42"
async-trait = "0.1.50"
num-traits = "0.2.14"
rayon = "1.5.1"

[dev-dependencies]
maplit = "1.0.2"
